test/invalid-semantic/64371_variable_not_in_scope/variable_not_in_scope.agu
-- Author: 64371, Ricardo Costa

let main: Unit =
    let n: Int = 13;
    let odd: Bool = (
        let even: Bool = n % 2 == 0;
        !even
    );
    print(odd);
    print(even) -- semantic error: 'even' is not declared in this scope